fixed: announcement dashlet could overflow the panel
would only happen if the height is reduced

--- a/src/stylesheets/vortex/dashlet.scss
+++ b/src/stylesheets/vortex/dashlet.scss
@@ -258,6 +258,10 @@
   }
 }
 
+.list-announcements-container {
+  overflow-y: auto;
+}
+
 .dashlet-game-more {
   position: absolute;
   top: 0;
